updated site bg

--- a/MainIndex.html
+++ b/MainIndex.html
@@ -22,9 +22,9 @@
         
         <div class="fixed whitebox">
             <h1 class="large">ORANGE</h1>
-            <p>The Worlds Most Wonderful Colour</p>
+            <p>Find the right job for you</p>
         </div>
-        <img src="OrangeImages/MainCollage.jpg">
+        <img src="OrangeImages/Workerscollage.png">
     </div>
 
     <div class="section" style="padding-top: 10em;">
