--- a/MainIndex.html
+++ b/MainIndex.html
@@ -24,7 +24,7 @@
             <h1 class="large">ORANGE</h1>
             <p>Find the right job for you</p>
         </div>
-        <img src="OrangeImages/Workerscollage.png">
+        <img class="" src="OrangeImages/Workerscollage.png"> <!-- finna eda bua til class sem lagar image size issue (helst hafa dynamic) -->
     </div>
 
     <div class="section" style="padding-top: 10em;">
@@ -40,7 +40,7 @@
 
     <div class="section">
 
-            <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg">
+            <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg"> <!-- Replacea bg here -->
 
     </div>
 
@@ -245,7 +245,7 @@
     </div>
 
     <div class="section">
-        <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg">
+        <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg"> <!-- Replacea bg here -->
     </div>
 
     <div class="section">
