Images and bg changes

--- a/MainIndex.html
+++ b/MainIndex.html
@@ -20,12 +20,18 @@
               </div>
         </div>
         
+    
         <div class="fixed whitebox">
             <h1 class="large">ORANGE</h1>
             <p>Find the right job for you</p>
         </div>
-        <img class="" src="OrangeImages/Workerscollage.png"> <!-- finna eda bua til class sem lagar image size issue (helst hafa dynamic) -->
+
+
+      <div class="">
+        <img class="" src="OrangeImages/Standard1Orange.jpg" width="100%" height="100%"> <!-- finna eda bua til class sem lagar image size issue (helst hafa dynamic) -->
+      </div>
     </div>
+
 
     <div class="section" style="padding-top: 10em;">
         <section class="container col-2">
@@ -40,7 +46,7 @@
 
     <div class="section">
 
-            <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg"> <!-- Replacea bg here -->
+            <img class="resizeaaaa" src="OrangeImages/waveyOrange.jpg"> <!-- Replacea bg here -->
 
     </div>
 
@@ -245,7 +251,7 @@
     </div>
 
     <div class="section">
-        <img class="resizeaaaa" src="OrangeImages/orangeSunset2.jpg"> <!-- Replacea bg here -->
+        <img class="resizeaaaa" src="OrangeImages/SecondaryOrang.jpg"> <!-- Replacea bg here -->
     </div>
 
     <div class="section">
